--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     app:
         build: .
         container_name: worldapp
+        restart: always
         ports: 
             - 8080:8080
         volumes: 
